# OTUS_Homework_01

./: .travis.yml  CMakeLists.txt  README.md
Source/: lib.cpp  lib.h  main.cpp  test_main.cpp  version.h.in
VS/: OTUS_Homework_01.sln  OTUS_Homework_01.vcxproj  OTUS_Homework_01.vcxproj.filters
